add images for logstash pipeline